Adding hello world

--- a/hello-world.html
+++ b/hello-world.html
@@ -3,16 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>JavaScript Basics</title>
+		<title>Hello World!</title>
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 
 	<body>
-		<h1 style="color: red">JavaScript Basics</h1>
-		<h2>We will use this page to learn the basics!</h2>
+		<h1 style="color: yellow">Hello World</h1>
 
-		<ul>
-			<li><a href="hello-world.html">Hello World</a></li>
-		</ul>
+		<script src="scripts/hello-world.js"></script>
 	</body>
 </html>
