Update UI with results

--- a/rps.html
+++ b/rps.html
@@ -16,6 +16,13 @@
 			<button id="btn-scissors">Scissors</button>
 		</div>
 
+		<h2 id="game-results"></h2>
+
+		<div id="game-restart" style="display: none">
+			<h3>Do you want to play again?</h3>
+			<button id="btn-restart">Play Again!</button>
+		</div>
+
 		<script src="scripts/rps-game.js"></script>
 	</body>
 </html>
