Add color animation

--- a/canvas-basics.html
+++ b/canvas-basics.html
@@ -27,7 +27,7 @@
 			function resize() {
 				canvas.width = window.innerWidth;
 				canvas.height = window.innerHeight;
-				console.log(canvas.width, canvas.height);
+				//console.log(canvas.width, canvas.height);
 			}
 
 			resize();
@@ -35,6 +35,6 @@
 			window.addEventListener("resize", resize);
 		</script>
 
-        <script type="module" src="scripts/canvas-basics/app.js"></script>
+		<script type="module" src="scripts/canvas-basics/app.js"></script>
 	</body>
 </html>
